--- a/app/views/admin/stores/show.html.erb
+++ b/app/views/admin/stores/show.html.erb
@@ -1,3 +1,5 @@
+<h3>Welcome to your store</h3>
+
 <% if @store.open%>
   You store is Open and him can see all users<br>
   <%= link_to "Close Store", close_admin_store_path(@store), :class => "button red" %>
