--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -26,7 +26,7 @@
     </div>
 
     <div>
-      <%= f.submit submit_value %>
+      <%= f.submit submit_value, :style => "width: 210px" %>
     </div>
   </div>
   <span class="error_messages"><%= render 'shared/error_messages', :object => f.object %></span>
