--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -35,7 +35,7 @@ p, h1, h2, h3, h4, h5, h6, a {
 body {
   margin: 0;
   font-family: 'helvetica', sans-serif;
-  background-image: url("main-bg.jpg");
+  background-color: rgba(237, 237, 237, 0.62);
   font-size: 0.85em;
   cursor: default;
 }
@@ -47,7 +47,7 @@ a{
 }
 
 label{
-  font-size: 0.7em;
+  font-size: 0.8em;
   padding: 3px;
   display: block;
   margin-top: 5px;
@@ -84,10 +84,11 @@ table{
 
 .file_wrapper{
   position: relative;
-  height: 25px;
+  height: 30px;
   max-width: 100px;
   overflow: hidden;
   display: inline-block;
+  margin: 0;
   .file{
     opacity: 0;
     cursor: pointer;
@@ -99,10 +100,11 @@ table{
     cursor: pointer;
     height: 100%;
     width: 100%;
-    background: -webkit-linear-gradient(bottom, #ccc 0%, #e4e4e4 100%);
-    background: -moz-linear-gradient(bottom, #ccc 0%, #e4e4e4 100%);
+    text-shadow: 1px 1px 0px #2a87a2;
+    background: -webkit-linear-gradient(top, #5BC0DE, #2F96B4);
+    background: -moz-linear-gradient(top, #5BC0DE, #2F96B4);
     border: none;
-    color: #666;
+    color: #f5f5f5;
     padding: 3px 5px;
     border-radius: 3px;
     position: relative;
@@ -111,15 +113,19 @@ table{
   }
 }
 
+.required_mark{
+  color: red;
+  display: inline;
+}
+
 #header {
   position: relative;
   top: 0;
   left: 0;
   width: 100%;
   height: 40px;
-    background-color: rgba(58, 118, 49, 0.67);
+  background-color: #1e6174;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, .1);
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, .1);
   text-transform: uppercase;
   font-size: 12px;
   a{
@@ -127,26 +133,25 @@ table{
     display: block;
     float: left;
     margin: 5px;
-    padding: 7px;
     height: 30px;
     width: 30px;
     -webkit-transition: background-color 0.5s ease;
     -webkit-transition: box-shadow 0.5s ease;
     color: rgba(247, 247, 247, 0.92);
     font-weight: bold;
-    background-size: 100%;
+    background-size: 85%;
     background-repeat: no-repeat;
     background-position: center;
+    border-radius: 15px;
     &:hover{
-      border-radius: 5px;
-      box-shadow: 0 0 5px rgba(36, 103, 25, 0.78);
+      box-shadow: 0 0 5px rgba(245, 245, 245, 0.76);
     }
     &#goto_store{
       width: auto;
     }
     &#goto_store:hover{
       color: white;
-      box-shadow: 0 0 5px rgba(36, 103, 25, 0.78) inset;
+      box-shadow: 0 0 5px rgba(245, 245, 245, 0.76)inset;
     }
     &#stores_list_toggler{
       background-image: url("list.png");
@@ -165,6 +170,14 @@ table{
     }
     &#header_sign_out{
       background-image: url("right.png");
+    }
+    &#signin_window_toggler{
+      background-image: url("sign_in.png");
+      background-size: 60%;
+    }
+    &#header_sign_up{
+      background-image: url("sign_up.png");
+      background-size: 60%;
     }
   }
 }
@@ -269,8 +282,8 @@ table{
   color: #555;
   background-color: rgba(255, 255, 255, 0.6);
   padding: 10px 15px 50px;
-  box-shadow: 0 2px 2px 1px rgba(124, 124, 124, 0.42);
-  border-radius: 0 0 10px 10px  ;
+  border: 1px solid rgba(234, 234, 234, 0.97);
+  border-top: none;
   input{
     height: 30px;
     box-shadow: 0px 0px 2px rgba(133, 133, 133, 0.80);
@@ -352,8 +365,8 @@ table{
 #footer {
   padding: 5px;
   width: 100%;
-  background-color: rgba(175, 175, 175, 0.52);
-  box-shadow: 0 -2px 2px 1px rgba(124, 124, 124, 0.42);
+  background-color: rgba(81, 163, 81, 0.20);
+  border-top: 1px solid #1e6174;
   min-height: 50px;
   color: #444;
   #content{
@@ -433,6 +446,27 @@ table{
       color: #499249;
       font-weight: bold;
     }
+  }
+}
+
+#error_explanation{
+  margin: 10px;
+  background-color: #fbfbfb;
+  border: 1px solid #ddd;
+  h3{
+    padding: 7px;
+    height: 30px;
+    background-color: rgba(160, 36, 43, 0.20);
+  }
+  p{
+    padding: 3px 10px;
+    background-color: #f5f5f5;
+    border-bottom: 1px solid #ddd;
+  }
+  ul{
+    padding: 5px 50px;
+    list-style: none;
+    line-height: 1.5em;
   }
 }
 
