--- a/app/views/shared/_error_messages.erb
+++ b/app/views/shared/_error_messages.erb
@@ -1,9 +1,7 @@
 <% if object.errors.any? %>
     <div id="error_explanation">
-      <h4><%= pluralize(object.errors.count, "error") %>
-        prohibited this <%= object.class.to_s.underscore.humanize.downcase %>
-        from being saved:</h4>
-      <p>There were problems with the following fields:</p>
+      <h3>Failed to save</h3>
+      <p>Please fix problems with the following fields:</p>
       <ul>
         <% object.errors.full_messages.each do |msg| %>
             <li><%= msg %></li>
